--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "",
+  "name": "arm-network-test-client",
+  "private": true,
   "author": "Microsoft Corporation",
   "description": "NetworkManagementClient Library with typescript type definitions and works in node.js and browser javascript.",
-  "version": "",
+  "version": "0.1.0",
   "dependencies": {
     "ms-rest-azure-js": "~0.7.78",
     "ms-rest-js": "~0.11.282",
@@ -19,15 +20,13 @@
   "main": "./dist/lib/networkManagementClient.js",
   "types": "./typings/lib/networkManagementClient.d.ts",
   "devDependencies": {
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.0",
     "fork-ts-checker-webpack-plugin": "^0.4.2",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^4.0.0",
+    "npm-run-all": "^4.1.3",
     "ts-loader": "^4.4.1",
     "tslib": "^1.9.2",
     "tslint": "^5.7.0",
     "typescript": "^2.5.2",
-    "uglify-es": "^3.1.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.7"
   },
@@ -40,7 +39,8 @@
     "url": "http://github.com/Azure/azure-sdk-for-javascript/issues"
   },
   "scripts": {
-    "tsc": "tsc -p tsconfig.json",
-    "build": "npm -s run-script tsc && webpack && node node_modules/uglify-es/bin/uglifyjs --source-map -c -m -o networkManagementClientBundle.min.js networkManagementClientBundle.js"
+    "build": "run-p build:node build:browser",
+    "build:node": "tsc",
+    "build:browser": "webpack"
   }
 }
